--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -13,6 +13,7 @@ body {
   // font-size: 96px;
   line-height: normal;
   margin: 0;
+  text-decoration: none;
 }
 
 .header {
@@ -39,10 +40,14 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    display: block;
     margin-top: 30px;
     padding: 10px 20px;
     position: relative;
+  }
+
+  .connectbtn a {
+    text-decoration: none;
+    color: $buttonTextColor;
   }
 
   .connectbtn::after {
@@ -53,8 +58,8 @@ body {
     border-radius: 4px;
 
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 10px;
+    left: 10px;
     z-index: -1;
 
     opacity: 0.8;
@@ -72,26 +77,24 @@ body {
 }
 
 .card {
-  height: 520px;
   background-color: $cardColor;
+  border-radius: 20px;
   text-align: center;
   margin: 5px;
   img {
     padding: 20px;
-    width: 200px;
-    height: 200px;
   }
   .card-title {
     color: #fff;
-    font-size: 24px;
+    font-size: 28px;
     margin: 0;
     padding: 5px 70px;
   }
   .card-text {
     color: #fff;
-    font-size: 16px;
+    font-size: 19px;
     font-family: $PoppinsFont;
-    padding: 10px 30px;
+    padding: 20px 60px;
     // text-align: c;
   }
 }
@@ -376,12 +379,24 @@ body {
   line-height: normal;
 }
 
+.card-imgs img {
+  width: 68px;
+  height: 68px;
+  // background-color: red;
+}
+
+.app-imgs img {
+  width: 108px;
+  height: 68px;
+}
+
 @media (max-width: 768px) {
   .text {
-    font-size: 10px;
+    font-size: 14px;
+    text-decoration: none;
   }
   .header {
-    font-size: 48px;
+    font-size: 28px;
   }
 
   .subHeader,
@@ -400,11 +415,10 @@ body {
       background-color: $textColor2;
       color: $backgroudColor;
       font-family: $textFont;
-      font-size: 24px;
+      font-size: 14px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
-      display: block;
       margin-top: 30px;
       padding: 10px 20px;
       position: relative;
@@ -418,8 +432,8 @@ body {
       border-radius: 4px;
 
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: 10px;
+      left: 10px;
       z-index: -1;
 
       opacity: 0.8;
