--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -14,6 +14,8 @@ $headerColor: #1c1c1c;
 $backgroudColor: #222222;
 $cardColor: #263238;
 $formColor: #ececec;
+$color: #0d0909b4;
+$buttonTextColor: #252525;
 
 // Font
 $textFont: "Aleo", sans-serif;
