--- a/src/style/services.scss
+++ b/src/style/services.scss
@@ -11,3 +11,24 @@
   justify-content: center;
   align-items: center;
 }
+
+.serviceimgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  width: 340px;
+  // background-color: red;
+}
+
+.app img {
+  width: inherit;
+  height: inherit;
+}
