--- a/src/components/developmentProcess/devProcess.css
+++ b/src/components/developmentProcess/devProcess.css
@@ -3,12 +3,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
 .devContainer {
   background-color: #222222;
-  padding: 30px 100px;
+  padding: 80px 100px 0 100px;
+  position: relative;
+  z-index: 0;
 }
 .devContainer p {
   font-family: "Quattrocento", serif;
   color: #fff;
   font-size: 24px;
+  z-index: 1;
+}
+
+.devContainer::before {
+  content: "";
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background: linear-gradient(351.48deg, #737373 -1.48%, rgba(34, 34, 34, 0.133333) 100.67%), linear-gradient(270deg, #6a6a6a 0%, rgba(34, 34, 34, 0.13) 100%);
+  position: absolute;
+  top: 20%;
+  left: 80%;
+  z-index: -1;
+}
+
+.devContainer::after {
+  content: "";
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background: linear-gradient(351.48deg, #737373 -1.48%, rgba(34, 34, 34, 0.133333) 100.67%), linear-gradient(270deg, #6a6a6a 0%, rgba(34, 34, 34, 0.13) 100%);
+  position: absolute;
+  top: 75%;
+  right: 80%;
+  z-index: -1;
 }
 
 .devHeader {
@@ -16,8 +43,12 @@
   color: #fff;
   font-size: 64px;
   font-weight: 600;
+  z-index: 1;
 }
 
+.devImage {
+  z-index: 1;
+}
 .devImage h3 {
   font-family: "Oswald", sans-serif;
   color: #fff;
@@ -42,13 +73,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .line {
-  display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 50px;
+  z-index: 1;
 }
 
 .circle {
@@ -56,10 +88,24 @@
   height: 10px;
   background-color: #fff;
   border-radius: 50%;
+  z-index: 1;
 }
 
 .stick {
   width: 100px;
   height: 2px;
   background-color: #fff;
+  z-index: 1;
+}
+
+@media screen and (max-width: 500px) {
+  .devContainer {
+    padding: 50px 10px;
+  }
+  .devContainer p {
+    font-size: 18px;
+  }
+  .devHeader {
+    font-size: 32px;
+  }
 }/*# sourceMappingURL=devProcess.css.map */
