--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,26 +7,29 @@
   margin: 0 10px;
   font-weight: 500;
   font-size: 20px;
+  cursor: pointer;
   // opacity: 50%;
 }
 
 .nav-link.active {
-  opacity: 100%;
-  text-decoration: underline;
-  text-underline-offset: 5px;
-  text-decoration-thickness: 2px;
+  padding-bottom: 12px;
+  border-bottom: 3px solid $DarkBlue;
 }
 
-.contactBtn {
-  background-color: #000;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 5px;
-  padding: 10px 15px;
-  text-decoration: none;
+.nav-link:hover {
+  padding-bottom: 12px;
+  border-bottom: 3px solid $DarkBlue;
 }
 
-.contactBtn.active {
-  background-color: #fff;
+.nav-links {
+  font-family: $OswaldFont;
   color: #000;
+  text-decoration: none;
+  margin: 0 10px;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  display: block;
+  margin: 20px 0;
+  // background-color: red;
 }
