--- a/src/components/whoAreWe/whoarewe.scss
+++ b/src/components/whoAreWe/whoarewe.scss
@@ -4,7 +4,7 @@
   width: 100%;
   //   height: 100vh;
   background: $BackgroudColor;
-  padding: 35px 100px;
+  padding: 80px 100px 80px 100px;
   //   overflow-x: hidden;
 }
 
@@ -36,4 +36,28 @@
 .missionPhoto {
   width: inherit;
   height: inherit;
+}
+
+@media screen and (max-width: 500px) {
+  .whocontainer {
+    padding: 10px;
+  }
+
+  .whoheader {
+    font-size: 32px;
+  }
+
+  .whocontent {
+    font-size: 18px;
+  }
+
+  .missionPhotoContainer {
+    width: 100%;
+    height: inherit;
+  }
+
+  .missionPhotoContainer img {
+    width: inherit;
+    height: inherit;
+  }
 }
