--- a/src/components/faq/accordian/accordian.scss
+++ b/src/components/faq/accordian/accordian.scss
@@ -14,14 +14,14 @@
   padding: 0 100px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .accordianHeader {
     font-size: 24px;
     padding: 0 10px;
   }
 
-  .accordianText {
+  .accordiantext {
     font-size: 18px;
-    padding: 0 10px;
+    padding: 0px;
   }
 }
