--- a/src/components/developmentProcess/devProcess.css
+++ b/src/components/developmentProcess/devProcess.css
@@ -76,6 +76,12 @@
   z-index: 1;
 }
 
+.lines {
+  background-color: red;
+  align-items: center;
+  z-index: 1;
+}
+
 .line {
   justify-content: center;
   align-items: center;
@@ -88,6 +94,13 @@
   height: 10px;
   background-color: #fff;
   border-radius: 50%;
+  z-index: 1;
+}
+
+.sticks {
+  width: 500px;
+  height: 2px;
+  background-color: #fff;
   z-index: 1;
 }
 
