--- a/src/components/herobanner/herobanner.css
+++ b/src/components/herobanner/herobanner.css
@@ -16,8 +16,8 @@
   height: 100vh;
   background-image: url("./../../assets/image/Polygon.png");
   position: absolute;
-  top: 0;
-  left: 500px;
+  top: 0px;
+  left: 30%;
 }
 
 .bannerText {
@@ -50,6 +50,9 @@
 }
 
 @media screen and (max-width: 600px) {
+  .backgroundImage {
+    left: 10%;
+  }
   .bannerText {
     padding-left: 10px;
   }
