--- a/src/components/herobanner/herobanner.scss
+++ b/src/components/herobanner/herobanner.scss
@@ -19,8 +19,8 @@
   background-image: url("./../../assets/image/Polygon.png");
 
   position: absolute;
-  top: 0;
-  left: 500px;
+  top: 0px;
+  left: 30%;
 }
 
 .bannerText {
@@ -54,6 +54,11 @@
 }
 
 @media screen and (max-width: 600px) {
+  .backgroundImage {
+    // top: px;
+    left: 10%;
+  }
+
   .bannerText {
     padding-left: 10px;
     h1 {
