--- a/src/components/faq/accordian/accordian.css
+++ b/src/components/faq/accordian/accordian.css
@@ -1,28 +1,30 @@
 /* Poppin */
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .accordianHeader {
-  font-family: "Oswald", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   color: #fff;
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 500;
   padding: 0 100px;
 }
 
 .accordiantext {
-  font-family: "Quattrocento", serif;
-  font-size: 24px;
+  font-family: "Montserrat", serif;
+  font-size: 18px;
   font-weight: 700;
   padding: 0 100px;
 }
 
 @media screen and (max-width: 600px) {
   .accordianHeader {
-    font-size: 24px;
+    font-size: 18px;
     padding: 0 10px;
   }
   .accordiantext {
-    font-size: 18px;
-    padding: 0px;
+    font-size: 14px;
+    padding: 0 10px;
   }
 }/*# sourceMappingURL=accordian.css.map */
