--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,20 +1,22 @@
 /* Poppin */
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .footerContainer {
   background: linear-gradient(45deg, #565555 0.13%, rgba(34, 34, 34, 0.8) 100%);
   padding: 100px 100px;
 }
 
 .footerText h1 {
-  font-family: "Oswald", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   color: #fff;
-  font-size: 64px;
+  font-size: 58px;
   font-weight: 600px;
 }
 
 .footerText p {
-  font-family: "Quattrocento", serif;
+  font-family: "Montserrat", serif;
   font-size: 24px;
   font-weight: 700;
   color: #fff;
@@ -22,7 +24,7 @@
 }
 
 .phone {
-  font-family: "Oswald", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #007fff;
   text-decoration: none;
   font-size: 48px;
@@ -43,7 +45,7 @@
 .footerMap {
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  border-radius: 10px;
   overflow: hidden;
 }
 
