--- a/src/components/serviceWeProvide/serviceweprovide.css
+++ b/src/components/serviceWeProvide/serviceweprovide.css
@@ -1,19 +1,22 @@
 /* Poppin */
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .serviceContainer {
   background-color: #222222;
   padding: 50px 100px 0px 100px;
 }
 
 .serviceHeader {
-  font-family: "Oswald", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   color: #fff;
   font-size: 64px;
 }
 
 .serviceContent {
-  font-family: "Oswald", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   color: #fff;
   font-size: 24px;
 }
@@ -30,7 +33,7 @@
   font-weight: bold;
 }
 .serviceBox p {
-  font-family: "Quattrocento", serif;
+  font-family: "Montserrat", serif;
   font-size: 20px;
   font-weight: 700;
   color: #000;
@@ -70,7 +73,7 @@
     padding: 36px;
   }
   .serviceBox span {
-    font-size: 24px;
+    font-size: 28px;
   }
   .serviceBox p {
     font-size: 16px;
