--- a/src/components/whoAreWe/whoarewe.scss
+++ b/src/components/whoAreWe/whoarewe.scss
@@ -15,7 +15,7 @@
 }
 
 .whocontent {
-  @include FontStyle;
+  @include FontStyleLight;
   font-family: $QuattrocentoFont;
   font-size: 24px;
 }
@@ -27,6 +27,7 @@
 }
 
 .mission {
+  // font-weight: 500;
   @include FontStyle;
   @include DarkStyle;
   font-size: 32px;
