--- a/src/variable/variable.css
+++ b/src/variable/variable.css
@@ -1,3 +1,4 @@
 /* Poppin */
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");/*# sourceMappingURL=variable.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");/*# sourceMappingURL=variable.css.map */
