--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,7 +11,6 @@
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   color: #fff;
-  font-size: 58px;
   font-weight: 600px;
 }
 
@@ -27,9 +26,7 @@
   font-family: "Montserrat", sans-serif;
   color: #007fff;
   text-decoration: none;
-  font-size: 48px;
   font-weight: bold;
-  margin-right: 100px;
 }
 
 .email {
@@ -40,6 +37,8 @@
 
 .contactInfo {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footerMap {
