--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #222222;
+  margin: 0;
+  padding: 0;
+}
+
 ::-webkit-scrollbar {
   width: 0.5em;
   background-color: #222222;
