feat: update dependencies and enhance styling across components

--- a/src/components/serviceWeProvide/serviceweprovide.scss
+++ b/src/components/serviceWeProvide/serviceweprovide.scss
@@ -24,7 +24,7 @@
   margin-top: 50px;
 
   span {
-    // @include FontStyle;
+    @include FontStyle;
     // @include LightStyle;
     color: $LightBlue;
     font-size: 32px;
