--- a/src/components/herobanner/herobanner.css
+++ b/src/components/herobanner/herobanner.css
@@ -71,4 +71,12 @@
   .bannerText h1 {
     font-size: 32px;
   }
+  .bannerText .bannerDescription {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    color: #fff;
+  }
 }/*# sourceMappingURL=herobanner.css.map */
