--- a/src/components/herobanner/herobanner.scss
+++ b/src/components/herobanner/herobanner.scss
@@ -73,5 +73,12 @@
     h1 {
       font-size: 32px;
     }
+
+    .bannerDescription {
+      margin-top: 50px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      @include FontStyle;
+    }
   }
 }
