--- a/src/components/serviceWeProvide/serviceweprovide.css
+++ b/src/components/serviceWeProvide/serviceweprovide.css
@@ -28,6 +28,9 @@
   margin-top: 50px;
 }
 .serviceBox span {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #fff;
   color: #007fff;
   font-size: 32px;
   font-weight: bold;
