--- a/src/components/whoAreWe/whoarewe.css
+++ b/src/components/whoAreWe/whoarewe.css
@@ -3,9 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .whocontainer {
-  width: 100%;
   background: #222222;
-  padding: 80px 100px 80px 100px;
+  padding: 50px 100px 50px 100px;
 }
 
 .whoheader {
@@ -22,6 +21,7 @@
   color: #fff;
   font-family: "Montserrat", serif;
   font-size: 24px;
+  line-height: 2;
 }
 
 .title {
@@ -68,6 +68,7 @@
   }
   .whoheader {
     font-size: 32px;
+    margin-bottom: 50px;
   }
   .whocontent {
     font-size: 18px;
